# Loki-RS

./: .gitignore  Cargo.toml  Justfile  README.md  USAGE.md  bacon.toml  makefile
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build-linux-to-win.yml  build-linux.yml  build-macos.yml  release-linux.yml  release-macos.yml  release-windows.yml  release.yml  test.yml
config/: excludes.cfg.example
docs/: BUILD.md  parity_matrix.md  parity_v1_inventory.md  parity_v2_audit.md  score_calculation.md  step0_build_sanity.md  step4_progress.md
src/: helpers.rs  main.rs  modules.rs
src/helpers/: helpers.rs  html_report.rs  interrupt.rs  jsonl_logger.rs  remote_logger.rs  score.rs  throttler.rs  tui.rs  unified_logger.rs
src/loki_util/: html_report.rs  main.rs
src/modules/: filesystem_scan.rs  process_check.rs
tests/: README.md  loki_util_html_tests.sh  run_all_tests.sh
tests/basic_functionality/: test_binary_existence.sh  test_help_output.sh  test_version_output.sh
tests/configuration_tests/: test_exclusion_count.sh  test_yara_init.sh
tests/detection_tests/: test_exclusions.sh  test_file_type_filter.sh  test_filename_ioc.sh  test_yara_rule.sh
tests/error_handling_tests/: test_corrupted_binary.sh  test_empty_file.sh  test_invalid_input.sh  test_permission_denied.sh  test_symlink_loop.sh
tests/fixtures/: host1.jsonl  host2.jsonl  malformed.jsonl  minimal.jsonl  multiple_severities.jsonl
tests/lib/: test_helpers.sh
tests/scanning_tests/: test_simple_scan.sh
