[package]
name = "loki"
version = "2.9.2"
edition = "2021"

[[bin]]
name = "loki"
path = "src/main.rs"

[[bin]]
name = "loki-util"
path = "src/loki_util/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.*"
walkdir = "2.5"
clap = { version = "4.5", features = ["derive"] }
arrayvec = "0.7.*"
flexi_logger = "0.31"
colored = "2.0"
sysinfo = "0.33"
human_bytes = "0.4"
filesize = "0.2"
file-format = "0.26"
csv = "1.3"
md5 = "0.7"
sha1 = "0.10"
sha2 = "0.10.*"
hex = "0.4.*"
memmap2 = "0.9"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
yara-x = "1.10.0"
zip = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
num_cpus = "1.16"
netstat2 = "0.11"
ctrlc = "3.4"
dashmap = "6.0"
ureq = { version = "2.9", features = ["json", "tls"] }
dialoguer = "0.11"
ratatui = "0.28"
crossterm = "0.28"
get_if_addrs = "0.5"
atty = "0.2"
glob = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.4.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_Storage_FileSystem",
    "Win32_System_Console"
] }

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimisation
codegen-units = 1 # Reduced to increase optimisations.
panic = 'abort'   # Abort on panic
strip = "symbols" # Strip symbols from binary