[package]
name = "loki"
version = "2.10.0"
edition = "2021"

[[bin]]
name = "loki"
path = "src/main.rs"

[[bin]]
name = "loki-util"
path = "src/loki_util/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.*"
walkdir = "2.5"
clap = { version = "4.5", features = ["derive"] }
arrayvec = "0.7.*"
flexi_logger = "0.31"
colored = "3.1.1"
sysinfo = "0.38"
human_bytes = "0.4"
filesize = "0.2"
file-format = "0.28"
csv = "1.4"
md5 = "0.8"
sha1 = "0.10"
sha2 = "0.10.*"
hex = "0.4.*"
memmap2 = "0.9"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
yara-x = "1.12.0"
zip = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.11"
num_cpus = "1.17"
netstat2 = "0.11"
ctrlc = "3.5"
dashmap = "6.1"
ureq = { version = "3.1", features = ["json", "tls"] }
dialoguer = "0.12"
ratatui = "0.30"
crossterm = "0.29"
atty = "0.2"
glob = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.4.1"

[target.'cfg(not(all(windows, target_arch = "aarch64")))'.dependencies]
get_if_addrs = "0.5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_Storage_FileSystem",
    "Win32_System_Console"
] }
