[package]
name = "loki"
version = "2.10.0"
edition = "2021"

[[bin]]
name = "loki"
path = "src/main.rs"

[[bin]]
name = "loki-util"
path = "src/loki_util/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.29"
walkdir = "2.5.0"
clap = { version = "4.5.57", features = ["derive"] }
arrayvec = "0.7.6"
flexi_logger = "0.31.8"
colored = "3.1.1"
sysinfo = "0.38.1"
human_bytes = "0.4.3"
filesize = "0.2.0"
file-format = "0.28.0"
csv = "1.4.0"
md5 = "0.8.0"
sha1 = "0.10.6"
sha2 = "0.10.9"
hex = "0.4.3"
memmap2 = "0.9.9"
chrono = { version = "0.4.43", features = ["serde"] }
regex = "1.12.3"
yara-x = "1.13.0"
zip = "2.4.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rayon = "1.11.0"
num_cpus = "1.17.0"
netstat2 = "0.11.2"
ctrlc = "3.5.1"
dashmap = "6.1.0"
ureq = { version = "3.2.0", features = ["json"] }
dialoguer = "0.12.0"
ratatui = "0.30.0"
crossterm = "0.29.0"
atty = "0.2.14"
glob = "0.3.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2.180"

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.4.3"

[target.'cfg(not(all(windows, target_arch = "aarch64")))'.dependencies]
get_if_addrs = "0.5.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_System_Memory", "Win32_System_Diagnostics_Debug", "Win32_Storage_FileSystem", "Win32_System_Console"] }
